[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interface/resources/Backgrounds/1000-600-3.png" type="Texture" id=1]
[ext_resource path="res://Interface/Consumers/Intros.gd" type="Script" id=2]
[ext_resource path="res://Interface/resources/Positions/Explosion/blue/eb1.png" type="Texture" id=3]
[ext_resource path="res://Interface/resources/Backgrounds/1000-600-2.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 62.125 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Background1" type="Sprite" parent="."]
position = Vector2( 583, 364 )
texture = ExtResource( 1 )

[node name="Background2" type="Sprite" parent="."]
visible = false
position = Vector2( 568, 366 )
texture = ExtResource( 4 )

[node name="text" type="RichTextLabel" parent="."]
margin_left = 521.0
margin_top = 546.0
margin_right = 561.0
margin_bottom = 606.0
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="Area2D" parent="."]

[node name="Eb1" type="Sprite" parent="Door"]
position = Vector2( 551, 351 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( 548, 350 )
shape = SubResource( 1 )

[node name="item1" type="Area2D" parent="."]
visible = false

[node name="Eb1" type="Sprite" parent="item1"]
position = Vector2( 264, 222 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="item1"]
position = Vector2( 260, 222 )
shape = SubResource( 1 )

[node name="item2" type="Area2D" parent="."]
visible = false

[node name="Eb1" type="Sprite" parent="item2"]
position = Vector2( 257, 479 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="item2"]
position = Vector2( 256, 475 )
shape = SubResource( 1 )

[node name="item3" type="Area2D" parent="."]
visible = false

[node name="Eb1" type="Sprite" parent="item3"]
position = Vector2( 893, 225 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="item3"]
position = Vector2( 893, 224 )
shape = SubResource( 1 )

[node name="item4" type="Area2D" parent="."]
visible = false

[node name="Eb1" type="Sprite" parent="item4"]
position = Vector2( 897, 475 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="item4"]
position = Vector2( 896, 472 )
shape = SubResource( 1 )

[connection signal="input_event" from="Door" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="item1" to="." method="_on_item1_input_event"]
[connection signal="input_event" from="item2" to="." method="_on_item2_input_event"]
[connection signal="input_event" from="item3" to="." method="_on_item3_input_event"]
[connection signal="input_event" from="item4" to="." method="_on_item4_input_event"]
